--- a/app/src/main/res/layout/favourite_details.xml
+++ b/app/src/main/res/layout/favourite_details.xml
@@ -22,11 +22,11 @@
             <ImageView
                 android:id="@+id/moviePoster"
                 android:layout_width="match_parent"
-                android:layout_height="479dp"
-                android:contentDescription="Poster"
-                android:scaleType="centerCrop"
+                android:layout_height="359dp"
                 android:background="@drawable/rounded_poster"
-                android:clipToOutline="true" />
+                android:clipToOutline="true"
+                android:contentDescription="Poster"
+                android:scaleType="centerCrop" />
 
             <TextView
                 android:id="@+id/movieTitle"
@@ -62,7 +62,7 @@
                 android:textSize="16sp"
                 android:background="@android:color/transparent"
                 android:inputType="textMultiLine"
-                android:hint="Movie plot here..."
+                android:hint="@string/movie_plot_here"
                 android:minLines="4"
                 android:gravity="top|start" />
         </LinearLayout>
