--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -5,7 +5,9 @@
     android:layout_height="wrap_content"
     android:background="@drawable/item_background"
     android:layout_marginBottom="12dp"
-    android:padding="12dp"
+    android:padding="10dp"
+    android:layout_marginTop="55dp"
+    android:layout_marginHorizontal="10dp"
     android:clipToOutline="true">
 
     <ImageView
@@ -35,23 +37,23 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/rating_txt"
+        android:id="@+id/year_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rating"
+        android:text="@string/year"
         android:textColor="#CCCCCC"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="@id/title_txt"
         app:layout_constraintTop_toBottomOf="@id/title_txt" />
 
     <TextView
-        android:id="@+id/year_txt"
+        android:id="@+id/rating_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Year"
+        android:text="@string/rating"
         android:textColor="#CCCCCC"
         android:textSize="14sp"
-        app:layout_constraintStart_toStartOf="@id/rating_txt"
-        app:layout_constraintTop_toBottomOf="@id/rating_txt" />
+        app:layout_constraintStart_toStartOf="@id/year_txt"
+        app:layout_constraintTop_toBottomOf="@id/year_txt" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
